--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -157,10 +157,49 @@ footer {
 
 .participants-list {
   margin-top: 6px;
-  margin-left: 18px;
-  list-style-type: disc;
+  margin-left: 0;
+  list-style-type: none;
   color: #333;
   font-size: 15px;
+  padding-left: 0;
+}
+
+.participants-list.no-bullets {
+  list-style-type: none;
+  padding-left: 0;
+}
+
+.delete-participant {
+  position: relative;
+  background: none;
+  border: none;
+  color: #c62828;
+  font-size: 1.1em;
+  margin-left: 8px;
+  cursor: pointer;
+  vertical-align: middle;
+  overflow: hidden;
+  z-index: 1;
+  /* Remove instant color change */
+}
+.delete-participant::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  width: 200%;
+  height: 200%;
+  background: #1976d2;
+  border-radius: 50%;
+  z-index: -1;
+  transition: transform 1.5s cubic-bezier(0.4,0,0.2,1);
+}
+.delete-participant:hover::before {
+  transform: translate(-50%, -50%) scale(1);
+}
+.delete-participant:hover {
+  color: #fff;
 }
 
 .no-participants {
